; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/extr_tun.c_tun_net_fix_features.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/extr_tun.c_tun_net_fix_features.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.net_device = type { i32 }
%struct.tun_struct = type { i32 }

@TUN_USER_FEATURES = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.net_device*, i32)* @tun_net_fix_features to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @tun_net_fix_features(%struct.net_device* %0, i32 %1) #0 {
  %3 = alloca %struct.net_device*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.tun_struct*, align 8
  store %struct.net_device* %0, %struct.net_device** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.net_device*, %struct.net_device** %3, align 8
  %7 = call %struct.tun_struct* @netdev_priv(%struct.net_device* %6)
  store %struct.tun_struct* %7, %struct.tun_struct** %5, align 8
  %8 = load i32, i32* %4, align 4
  %9 = load %struct.tun_struct*, %struct.tun_struct** %5, align 8
  %10 = getelementptr inbounds %struct.tun_struct, %struct.tun_struct* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = and i32 %8, %11
  %13 = load i32, i32* %4, align 4
  %14 = load i32, i32* @TUN_USER_FEATURES, align 4
  %15 = xor i32 %14, -1
  %16 = and i32 %13, %15
  %17 = or i32 %12, %16
  ret i32 %17
}

declare dso_local %struct.tun_struct* @netdev_priv(%struct.net_device*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
